crates/carta/tests/snapshots/golden_writer__latex__common__list-nested-first-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{itemize}
\item
  \begin{itemize}
  \tightlist
  \item
    inner one
  \item
    inner two
  \end{itemize}
\item
  outer two
\end{itemize}
