crates/carta/tests/snapshots/golden_writer__latex__common__ordered-period.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{enumerate}
\def\labelenumi{\arabic{enumi}.}
\tightlist
\item
  one
\item
  two
\end{enumerate}
