crates/carta/tests/snapshots/golden_writer__latex__common__ordered-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{enumerate}
\def\labelenumi{\arabic{enumi}.}
\setcounter{enumi}{4}
\tightlist
\item
  five
\item
  six
\end{enumerate}
