crates/carta/tests/snapshots/golden_writer__latex__common__span-semantic.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\protect\phantomsection\label{theid}{x} {term}
